# git-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
commit_msg_hooks/: ensure_jira_issue_commit_msg.py
